<resources>
    <string name="app_name">Covid19App</string>
    <string name="lorem">LLorem Ipsum adalah contoh teks atau dummy dalam industri percetakan dan penataan huruf atau typesetting. Lorem Ipsum telah menjadi standar contoh teks sejak tahun 1500an, saat seorang tukang cetak yang tidak dikenal mengambil sebuah kumpulan teks dan mengacaknya untuk menjadi sebuah buku contoh huruf. Ia tidak hanya bertahan selama 5 abad, tapi juga telah beralih ke penataan huruf elektronik</string>
    <string name="intro1">COVID-19 (coronavirus disease 2019) adalah jenis penyakit baru yang disebabkan oleh virus dari golongan coronavirus, yaitu SARS-CoV-2 yang juga sering disebut virus Corona.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_text">Home</string>
    <string name="statistics_text">Statistik</string>
    <string name="worldwide_text">World Wide</string>
    <string name="shop_text">Shop</string>
    <string name="rumah_sakit">Rumah Sakit</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="obat">Obat</string>
    <string name="informasi">Informasi</string>
    <string name="covid_live_update">Covid 19 Live Updates</string>
    <string name="global_update_covid">Global Data Update</string>
    <string name="top_countries">Top Countries</string>
    <string name="learn_more_covid19">See Information About COVID 19 Around The World</string>
    <string name="stayathome">#StayHome</string>
    <string name="learnmore">Lihat Data Per Provinsi</string>
</resources>