<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".view.Fragment.FragmentWordWide">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/bg_home"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="30dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/covid_live_update"
            android:textColor="@color/light_white"
            android:textSize="15sp">
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Last Updated : 1 October 2021 | 12.00 WIB"
            android:textColor="@color/tab_indicator_gray"
            android:textSize="10sp">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/global_update_covid"
                android:textColor="@color/black"
                android:textSize="15sp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/roboto_bold"
                android:text="Refresh"
                android:textColor="#64A5CA"
                android:textSize="15sp"></TextView>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/bg"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="120dp"
                android:layout_toRightOf="@+id/card1"
                android:layout_marginStart="15dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/bg"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card3"
                android:layout_width="120dp"
                android:layout_toRightOf="@+id/card2"
                android:layout_marginStart="15dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/bg"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:paddingLeft="15dp"
        android:layout_marginTop="13dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Last Updated 01 October 2021 | 14.00"
        android:textColor="@color/black"
        android:textSize="13sp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/top_countries"
                android:textColor="@color/black"
                android:textSize="15sp"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:fontFamily="@font/roboto_bold"
                android:text="Refresh"
                android:textColor="#64A5CA"
                android:textSize="15sp"></TextView>

        </RelativeLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/card4"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/bg"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card5"
                android:layout_width="120dp"
                android:layout_toRightOf="@+id/card4"
                android:layout_marginStart="15dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/bg"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card6"
                android:layout_width="120dp"
                android:layout_toRightOf="@+id/card5"
                android:layout_marginStart="15dp"
                android:layout_height="100dp"
                android:backgroundTint="@color/bg"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        app:cardCornerRadius="15dp"
        android:backgroundTint="@color/light_white"
        android:layout_height="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:orientation="horizontal"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgearth"
                    android:layout_width="120dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ilustrasion_earth"
                    android:layout_height="match_parent">

                </ImageView>

                <LinearLayout
                    android:id="@+id/lnmoreabout"
                    android:layout_width="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp"
                    android:layout_toRightOf="@id/imgearth"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvmore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_bold"
                        android:text="@string/learn_more_covid19"
                        android:textColor="@color/black"
                        android:textSize="14sp"></TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_toRightOf="@id/imgearth"
                        android:layout_below="@+id/tvmore"
                        android:text="@string/stayathome"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>

                <Button
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="10dp"
                    android:drawableRight="@drawable/arrow"
                    android:text="Next"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="11sp"
                    app:backgroundTint="@color/bg">

                </Button>

            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>